data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1701.wast
;; 2. **Test Description**: Place a `br_if` instruction inside an `if-else` block, where the `if` condition is false. Ensure that `br_if` does not cause a branch when its own condition evaluates to true (non-zero).    - **Constraint Checked**: Verifies that `br_if` executes only within its proper context and does not interfere with the surrounding control flow.    - **Relation to Incorrect Evaluation**: Identifies if `br_if` condition is always causing a branch, irrespective of the surrounding `if` block’s condition.

(assert_invalid
  (module
    (func $test_br_if_within_if_else
      (if (i32.const 0)
        (then
          (block
            (br_if 0 (i32.const 1))
          )
        )
        (else
          (nop)
        )
      )
    )
  )
  "type mismatch"
)